typescript/checker/tests/conformance/async/es6/asyncArrowFunction/asyncArrowFunction3_es6.ts.stderr
error: Expected ident
 --> $DIR/tests/conformance/async/es6/asyncArrowFunction/asyncArrowFunction3_es6.ts:3:12
  |
3 | function f(await = await) {
  |            ^^^^^

